refactor: полный аудит и рефакторинг QweTnts
- автоподжог вынесен в config.yml (settings.dynamites.auto-ignite, по умолчанию false),
  динамит ставится блоком и поджигается огнивом/огнём/взрывом (цепная детонация)
- новая модель взрывоустойчивости (BlastMath): max-resistance, resistance-scale,
  явные правила breaking.blocks, drop-chance теперь реально работает
- локализация переписана по образцу LanguageManager из QPS (lang/ru_RU.yml, en_US.yml,
  %prefix%, MiniMessage); сырой ключ в чат больше не уходит
- QpsBridge: null-безопасный доступ к API QPS, все проверки ядра/флага в одном месте
- PrimingService, PlacedDynamiteManager, AntiLag (лимиты + рейт-лимит сообщений)
- тотальные проверки null/isCancelled/instanceof, валидация конфига
- пост-обработка блоков группируется по чанкам (Folia-safe)
- команды, права bypass.*, документация docs/AUDIT.md

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>